# mga-soap-calculator

./: .env.example  .gitignore  .task-context.md  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  PHASE_1_COMPLETE.md  PHASE_6_SUMMARY.md  PROPOSED_GLOBAL_CLAUDE.md  PROPOSED_MANDATORY_PROTOCOL.md  PROPOSED_orchestration-enforcement-SKILL.md  PROTOCOL_ENFORCEMENT_IMPLEMENTATION_GUIDE.md  README.md  README_PHASE6.md  RESEARCH_FINDINGS_SUMMARY.md  SPECIFICATION.md  add-frontmatter.fish  alembic.ini  docker-compose.prod.yml  docker-compose.yml  oils-complete-database.json  open-source-soap-calculator-analysis.md  pyproject.toml  pytest.ini
.claude/: RULES.md
agent-os/: config.yml
agent-responses/: 2025-11-01T14-30-00_task-list-creator_core-calculation-api.md  2025-11-01T14-45-30_spec-shaper_requirements-complete.md  2025-11-01_17-20-58_python-pro_phase-2-calculation-engine.md  2025-11-01_code-reviewer_phase-4-security-review.md  2025-11-01_security-auditor_phase-4-authentication.md  2025-11-02T160000_explore_mga-soap-calculator-overview.md  2025-11-02_api-documenter_phase-6-deployment.md  2025-11-02_code-reviewer_phase-6-verification.md  2025-11-02_explore_agent-os-framework.md  2025-11-03_fedora42-rootless-fixes_ACTUAL.md  20250111_143000_product-planner_product-planning-complete.md  20251101T211331Z_general-purpose_skill-improvement.md  20251101_135900_general-purpose_global-protocol-install.md  20251101_170817_backend-architect_phase-1-fixes.md  20251101_173000_code-reviewer_phase-2-review.md  20251101_181930_backend-architect_phase-3-api-layer.md  20251101_182946_backend-architect_phase-3-fixes.md  20251101_183000_code-reviewer_phase-3-review.md  20251101_184500_code-reviewer_phase-3-reverify.md  20251101_185626_test-automator_phase-5-integration-testing.md  20251101_190612_test-automator_phase-5-status.md  20251101_192100_backend-architect_database-initialization.md  20251101_192523_test-automator_phase-5-findings.md  20251101_232145_spec-writer_spec-complete.md  20251101_235016_backend-architect_phase-1-foundation.md  20251101_code-reviewer_phase-2-mixed-lye-reverify.md  (+106 more)
ansible/: VAULT-SETUP.md  (+3 more)
(+284 files in other folders)
